fix bug #46335 (DOMText::splitText doesn't handle multibyte characters) add test